Changed pom and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.url=jdbc:postgresql://iv1201server.postgres.database.azure.com
 spring.datasource.username=kth2019repping
 spring.datasource.password=e27G%iZp3
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.minimumIdle=2
