--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.20</version>
+          <version>3.0.0-M5</version>
+          <configuration>
+        <reuseForks>false</reuseForks>
+        <forkCount>1</forkCount>
+    </configuration>
         </plugin>
 
 
